# CPL2020skeleton

./: .gitignore
api/fs-tests/: b_test.rs
api/src/: fs.rs  types.rs
solution/: Cargo.toml  FILLME.md
solution/fs-images-a-alloc/: img
solution/fs-images-a-bitmap/: img
solution/fs-images-my-a-i_write/: img
solution/fs-images-my-b-mul_blocks/: img
solution/fs-images-my-c-dirlookup/: img
solution/fs-images-my-e-c_read/: img
solution/fs-images-my-e-i_read/: img
solution/fs-images-my-e-mut_iter/: img
solution/fs-images-my-e-rrange/: img
solution/src/: a_block_support.rs  b_inode_support.rs  c_dirs_support.rs  d_path_support.rs  e_inode_RW_support.rs  f_indirect_inodes.rs  f_indirect_inodes.rs.save  g_caching_inodes.rs  lib.rs  utils.rs
